updated site a ton

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Title Here</title>
 </head>
 <body>
-    hello
+    <div class="wrapper">
+        <div class="inner">
+           <h1>Hey you! Youre finally awake!</h1> <br>
+           welcome to this site, its not much really. just me messing around! Stick around if you want, 
+           maybe itll become something fun in the future, who knows!
+        </div>
+     </div>
+
 </body>
 </html>
