--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="wrapper">
         <div class="inner">
            <h1>Hey you! Youre finally awake!</h1> <br>
-           welcome to this site, its not much really. just me messing around! Stick around if you want, 
-           maybe itll become something fun in the future, who knows!
+           welcome to this site, its not much really. just me messing around! <br> <br> 
+           Stick around if you want, maybe itll become something fun in the future, who knows!
         </div>
      </div>
 
