--- a/experiments/scroll.html
+++ b/experiments/scroll.html
@@ -5,12 +5,18 @@
         <script src="scripts/scrollscript.js" defer></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>scrolling test</title>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
         <meta name="description" content="scrolling experiment :)">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles/scrollstyle.css">
     </head>
     <body>
-        
+        <div class="text-div" id="red">red</div>
+        <div class="text-div" id="orange">orange</div>
+        <div class="text-div" id="yellow">yellers</div>
+        <div class="text-div" id="green">greem</div>
+        <div class="text-div" id="blue">blu</div>
+        <div class="text-div" id="purple">porpale</div>
         
     </body>
 </html>
